@@ -75,7 +75,6 @@ admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=\u7528\u6237ID\u5b57\u6bb5\u7684\u540d\u79f0
 admin.caption.usergroup.username=\u7528\u6237\u540d
 admin.caption.usepreview=\u4f7f\u7528\u9884\u89c8
-admin.caption.useversioning=\u4f7f\u7528\u4fee\u8ba2\u7248\u672c
 admin.caption.virtualwiki=\u865a\u62df Wiki
 admin.message.changesnotsaved=\u4fee\u6539\u5e76\u672a\u4fdd\u5b58
 admin.message.changessaved=\u4fdd\u5b58\u4fee\u6539
