@@ -329,9 +329,6 @@ STATEMENT_SELECT_TOPIC_SEQUENCE = \
 STATEMENT_SELECT_TOPIC_VERSION = \
     select * from jam_topic_version \
     where topic_version_id = ?
-STATEMENT_SELECT_TOPIC_VERSION_LAST = \
-    select max(topic_version_id) as topic_version_id from jam_topic_version \
-    where topic_id = ?
 STATEMENT_SELECT_TOPIC_VERSION_SEQUENCE = \
     select max(topic_version_id) as topic_version_id from jam_topic_version
 STATEMENT_SELECT_TOPIC_VERSIONS = \
