@@ -11,6 +11,7 @@
 * FEATURE: "Go To" button in search should redirect to search results if
   no such topic exists.
 * FEATURE: After editing a section, page will now reload to that section.
+* FEATURE: Remove option to disable topic versioning.
 * FEATURE: Updated Polish translations from Robert Matyja (dlpa).
 
 0.4.0
